--- a/materiales/templates/materiales/formularios_altas/alta_materiales.html
+++ b/materiales/templates/materiales/formularios_altas/alta_materiales.html
@@ -438,12 +438,12 @@ function initProyectorDynamicFunctionality() {
                 "></div>
                 <div class="row mb-2">
                     <div class="col-md-3">
-                        <label for="num_registro_${i}" style="font-size: 14px;">N° de registro:</label>
+                        <label for="num_registro_${i}" style="font-size: 14px;">N° de registro<span style="color: #dc3545; font-weight: bold;">*</span>:</label>
                         <input type="text" class="form-control" id="num_registro_${i}" name="num_registro_${i}" required placeholder="N° de registro...">
                     </div>
                     <div class="col-md-3">
                         <label for="modelo_proy_${i}" style="font-size: 14px;">Modelo:</label>
-                        <input type="text" class="form-control" id="modelo_proy_${i}" name="modelo_proy_${i}" required placeholder="Modelo..." />
+                        <input type="text" class="form-control" id="modelo_proy_${i}" name="modelo_proy_${i}" placeholder="Modelo..." />
                     </div>
                 </div>`;
             }
