--- a/materiales/templates/materiales/formularios_altas/alta_notebook.html
+++ b/materiales/templates/materiales/formularios_altas/alta_notebook.html
@@ -16,7 +16,7 @@
             <div class="col-md-3">
                 <label for="sede" style="font-size: 14px;">Sede<span class="text-danger">*</span></label>
                 <select class="form-control custom-input" id="sede" name="sede" required>
-                <option value="">Aún sin seleccionar</option>
+                <option value="">Seleccione una sede</option>
                 <option value="sede1">La Plata</option>
                 <option value="sede2">Abasto</option>
                 </select>
