--- a/materiales/templates/materiales/formularios_altas/formulario_programa.html
+++ b/materiales/templates/materiales/formularios_altas/formulario_programa.html
@@ -100,21 +100,21 @@
         <!-- CAMPOS SIMPLIFICADOS - SOLO LOS NECESARIOS -->
         <div class="row">
             <div class="col-md-3 form-group mb-3">
-                <label for="{{ form.profesor.id_for_label }}" class="text-input" style="color:#25898D; font-size: 14px;">Profesor/a:</label>
+                <label for="{{ form.profesor.id_for_label }}" class="text-input" style="color:#25898D; font-size: 14px;">Profesor/a: <span style="color: red;">*</span></label>
                 {{ form.profesor }}
                 {% if form.profesor.errors %}
                     <div class="text-danger">{{ form.profesor.errors }}</div>
                 {% endif %}
             </div>
             <div class="col-md-4 form-group mb-3">
-                <label for="{{ form.carrera.id_for_label }}" class="text-input" style="color:#25898D; font-size: 14px;">Carrera:</label>
+                <label for="{{ form.carrera.id_for_label }}" class="text-input" style="color:#25898D; font-size: 14px;">Carrera: <span style="color: red;">*</span></label>
                 {{ form.carrera }}
                 {% if form.carrera.errors %}
                     <div class="text-danger">{{ form.carrera.errors }}</div>
                 {% endif %}
             </div>
             <div class="col-md-5 form-group mb-3">
-                <label for="{{ form.materia.id_for_label }}" class="text-input" style="color:#25898D; font-size: 14px;">Materia:</label>
+                <label for="{{ form.materia.id_for_label }}" class="text-input" style="color:#25898D; font-size: 14px;">Materia: <span style="color: red;">*</span></label>
                 {{ form.materia }}
                 {% if form.materia.errors %}
                     <div class="text-danger">{{ form.materia.errors }}</div>
@@ -124,15 +124,14 @@
 
         <div class="row">
             <div class="col-md-7 form-group mb-3">
-                <label for="{{ form.ingresar_enlace.id_for_label }}" class="text-input" style="color:#25898D; font-size: 14px;">Enlace (URL):</label>
+                <label for="{{ form.ingresar_enlace.id_for_label }}" class="text-input" style="color:#25898D; font-size: 14px;">Enlace (URL): <span style="color: red;">*</span></label>
                 {{ form.ingresar_enlace }}
                 {% if form.ingresar_enlace.errors %}
                     <div class="text-danger">{{ form.ingresar_enlace.errors }}</div>
                 {% endif %}
-                <small class="form-text text-muted">Enlace al programa de la materia (opcional)</small>
             </div>
             <div class="col-md-5 form-group mb-3">
-                <label for="{{ form.ciclo_lectivo.id_for_label }}" class="text-input" style="color:#25898D; font-size: 14px;">Ciclo Lectivo:</label>
+                <label for="{{ form.ciclo_lectivo.id_for_label }}" class="text-input" style="color:#25898D; font-size: 14px;">Ciclo Lectivo: <span style="color: red;">*</span></label>
                 {{ form.ciclo_lectivo }}
                 {% if form.ciclo_lectivo.errors %}
                     <div class="text-danger">{{ form.ciclo_lectivo.errors }}</div>
